; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_test-device.c_fz_test_stroke_text.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_test-device.c_fz_test_stroke_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32*, i32, i32*, float*, float, i32)* @fz_test_stroke_text to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fz_test_stroke_text(i32* %0, i32* %1, i32* %2, i32* %3, i32 %4, i32* %5, float* %6, float %7, i32 %8) #0 {
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca float*, align 8
  %17 = alloca float, align 4
  %18 = alloca i32, align 4
  %19 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %10, align 8
  store i32* %1, i32** %11, align 8
  store i32* %2, i32** %12, align 8
  store i32* %3, i32** %13, align 8
  store i32 %4, i32* %14, align 4
  store i32* %5, i32** %15, align 8
  store float* %6, float** %16, align 8
  store float %7, float* %17, align 4
  store i32 %8, i32* %18, align 4
  %20 = load i32*, i32** %11, align 8
  %21 = bitcast i32* %20 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %21, %struct.TYPE_3__** %19, align 8
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %19, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = icmp eq i64 %24, 0
  br i1 %25, label %26, label %36

26:                                               ; preds = %9
  %27 = load float, float* %17, align 4
  %28 = fcmp une float %27, 0.000000e+00
  br i1 %28, label %29, label %36

29:                                               ; preds = %26
  %30 = load i32*, i32** %10, align 8
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %19, align 8
  %32 = load i32*, i32** %15, align 8
  %33 = load float*, float** %16, align 8
  %34 = load i32, i32* %18, align 4
  %35 = call i32 @fz_test_color(i32* %30, %struct.TYPE_3__* %31, i32* %32, float* %33, i32 %34)
  br label %36

36:                                               ; preds = %29, %26, %9
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %19, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 1
  %39 = load i64, i64* %38, align 8
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %54

41:                                               ; preds = %36
  %42 = load i32*, i32** %10, align 8
  %43 = load %struct.TYPE_3__*, %struct.TYPE_3__** %19, align 8
  %44 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %43, i32 0, i32 1
  %45 = load i64, i64* %44, align 8
  %46 = load i32*, i32** %12, align 8
  %47 = load i32*, i32** %13, align 8
  %48 = load i32, i32* %14, align 4
  %49 = load i32*, i32** %15, align 8
  %50 = load float*, float** %16, align 8
  %51 = load float, float* %17, align 4
  %52 = load i32, i32* %18, align 4
  %53 = call i32 @fz_stroke_text(i32* %42, i64 %45, i32* %46, i32* %47, i32 %48, i32* %49, float* %50, float %51, i32 %52)
  br label %54

54:                                               ; preds = %41, %36
  ret void
}

declare dso_local i32 @fz_test_color(i32*, %struct.TYPE_3__*, i32*, float*, i32) #1

declare dso_local i32 @fz_stroke_text(i32*, i64, i32*, i32*, i32, i32*, float*, float, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
